--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "budget_app-client",
   "version": "1.0.0",
-  "main": "expo/AppEntry.js",
+  "main": "expo-router/entry",
   "scripts": {
+    "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "start": "expo start",
     "android": "expo start --android",
@@ -22,23 +23,30 @@
     "react-dom": "18.2.0",
     "react-native": "0.74.2",
     "react-native-paper": "^5.12.3",
-    "react-native-safe-area-context": "^4.10.4",
+    "react-native-safe-area-context": "4.10.1",
     "react-native-vector-icons": "^10.1.0",
     "react-native-web": "~0.19.10",
-    "react-redux": "^9.1.2"
+    "react-redux": "^9.1.2",
+    "expo-router": "~3.5.17",
+    "react-native-screens": "3.31.1",
+    "expo-linking": "~6.3.1",
+    "expo-constants": "~16.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react": "^18.3.3",
+    "@types/react": "~18.2.79",
     "@types/react-native": "^0.73.0",
     "@typescript-eslint/eslint-plugin": "^7.13.0",
     "@typescript-eslint/parser": "^7.13.0",
     "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-jsx-a11y": "^6.8.0",
+    "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "^7.34.2",
     "eslint-plugin-react-hooks": "^4.6.2",
-    "typescript": "^5.4.5"
+    "prettier": "^3.3.2",
+    "typescript": "~5.3.3"
   },
   "private": true
 }
