--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
     "baseUrl": "./",                  
     "paths": {                         
       "@/*": ["src/*"],
+      "@root/*": ["./*"],
       "@app/*": ["app/*"]
     }
   },
